fix: added overflow hidden to prevent overflow issues on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html{
-  @apply bg-black scroll-smooth lining-nums
+  @apply bg-black scroll-smooth lining-nums overflow-hidden
 }
 
 #__next {
